# ReAgentAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  LICENSE  README.md  docker-compose.yml  pyproject.toml  run.py  run_aizynth.py
.github/workflows/: lint.yml
data/: docker_config.yml  popular_smiles.csv
reagentai/src/: main.py
src/reagentai/: constants.py  logging.py  main.py
src/reagentai/agents/main/: instructions.txt  main_agent.py
src/reagentai/agents/retrosynth_agent/: instructions.txt  retrosynth_agent.py
src/reagentai/aizynth/: retrosynthesis.py
src/reagentai/common/: aizynthfinder.py  client.py  mlflow_tracking.py  typing.py
src/reagentai/common/utils/: cache.py  image.py  parse.py  redis.py
src/reagentai/core/: __init__.py  registers.py  tools.py
src/reagentai/llm/: client.py
src/reagentai/llm/instructions/: instructions.txt
src/reagentai/models/: llm_output.py  output.py  retrosynthesis.py
src/reagentai/tools/: drawing.py  helpers.py  image.py  popular_smiles_dataset.py  pubchem.py  retrosynthesis.py  smiles.py
src/reagentai/ui/: app.py
tests/: test_reagentai.py
